# FrameCompare

./: .gitignore  CMakeLists.txt  README.md
data/: rgb_template.pdn
src/: frcmp.cpp
